# oryn

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: publish.yml
oryn/: __init__.py  __main__.py  build.py  gitignore.py  inclusion.py  matching.py  metadata.py  util.py
src/oryn/: build.py  inclusion.py  matching.py  metadata.py
