[build-system]
requires = ["flit_core~=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "oryn"
version = "1.1"
description = "PEP 517-compliant build backend"
license = "EUPL-1.2"
readme = "readme.md"
requires-python = "~=3.10"
dependencies = [
  "editables==0.5",
  "packaging==25.0",
  "tomli~=2.2.1; python_version == '3.10'"
]

[project.urls]
Repository = "https://github.com/slietar/oryn"
