[build-system]
requires = ["oryn~=1.3"]
build-backend = "oryn"

[project]
name = "oryn"
version = "1.3"
description = "PEP 517-compliant build backend"
license = "EUPL-1.2"
readme = "readme.md"
requires-python = "~=3.10"
dependencies = [
  "packaging==25.0",
  "tomli~=2.2.1; python_version == '3.10'"
]

[project.urls]
Repository = "https://github.com/slietar/oryn"

[tool.oryn]
include = ["oryn"]
