[build-system]
requires = ["oryn~=1.3"]
build-backend = "oryn"

[project]
name = "oryn"
version = "1.3"
description = "PEP 517-compliant build backend"
license = "EUPL-1.2"
readme = "readme.md"
requires-python = "~=3.12"
dependencies = [
  "packaging==25.0",
]

[project.urls]
Repository = "https://github.com/slietar/oryn"

[tool.oryn]
include = ["src/*"]
